--- a/apps/stremio-web/ci/goss.yaml
+++ b/apps/stremio-web/ci/goss.yaml
@@ -1,4 +1,8 @@
 ---
+environment:
+  WEB_AUTH_KEY:
+    value: justforgoss
+
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 # process:
 #   gunicorn:
