--- a/apps/flixio-api/ci/goss.yaml
+++ b/apps/flixio-api/ci/goss.yaml
@@ -1,4 +1,7 @@
 ---
+env:
+  FLIXIO_API_KEY:
+    value: forgosstests
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 # process:
 #   gunicorn:
