--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -12,6 +12,11 @@ RUN git clone -b $VERSION https://github.com/g0ldyy/comet.git /source
 COPY apps/comet/no-warp-necessary.patch /source/
 RUN cd /source && git apply no-warp-necessary.patch && rm no-warp-necessary.patch
 
+# Patch in the stremthru PR
+RUN cd /source && \
+    wget https://patch-diff.githubusercontent.com/raw/g0ldyy/comet/pull/166.patch && \
+    git apply 166.patch
+
 FROM python:3.11-alpine
 LABEL name="Comet" \
       description="Stremio's fastest torrent/debrid search add-on." \
