--- a/apps/stremthru/Dockerfile
+++ b/apps/stremthru/Dockerfile
@@ -24,6 +24,7 @@ COPY --from=cloner /source/*.go ./
 COPY --from=cloner /source/stremio ./stremio
 COPY --from=cloner /source/schema.hcl source/schema.postgres.hcl ./
 
+RUN mkdir -p /schema
 RUN CGO_ENABLED=1 GOOS=linux go build -tags 'heavy' -o ./stremthru -a -ldflags '-linkmode external -extldflags "-static"'
 
 FROM scratch
@@ -32,6 +33,8 @@ WORKDIR /app
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /workspace/stremthru ./stremthru
+COPY --from=builder /schema /tmp
+COPY --from=arigaio/atlas:0.29.0-community /atlas /usr/local/bin/atlas
 
 VOLUME ["/app/data"]
 
