--- a/apps/cinesync/ci/goss.yaml
+++ b/apps/cinesync/ci/goss.yaml
@@ -1,18 +1,18 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  python:
+  python3:
     running: true
+  ttyd:
+    running: true    
 
-# can't monitor this because zurg will crash with no api key
-# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-# port:
-#   # https://github.com/aelsabbahy/goss/issues/149
-#   tcp6:9999:
-#     listening: true
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+port:
+  # https://github.com/aelsabbahy/goss/issues/149
+  tcp:3000:
+    listening: true
 
-# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:9999:
-#     status: 200
-#     timeout: 5000
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+http:
+  http://localhost:3000:
+    status: 200
