--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -18,7 +18,8 @@ RUN cd /source && \
     git apply 166.patch
 
 # Revert removal of ED (for now)
-RUN git revert d6922010290ebe62b56bc782859e8ad07e14daeb
+RUN cd /source && 
+    git revert d6922010290ebe62b56bc782859e8ad07e14daeb
 
 FROM python:3.11-alpine
 LABEL name="Comet" \
