revert to stable

--- a/apps/cinesync/Dockerfile
+++ b/apps/cinesync/Dockerfile
@@ -5,10 +5,10 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-# RUN git clone -b CineSync-$VERSION  https://github.com/sureshfizzy/CineSync.git /source
+RUN git clone -b CineSync-$VERSION  https://github.com/sureshfizzy/CineSync.git /source
 
 # temporary fix
-RUN git clone -b anime-fix  https://github.com/sureshfizzy/CineSync.git /source
+# RUN git clone -b anime-fix  https://github.com/sureshfizzy/CineSync.git /source
 
 # Use an official Python runtime as a parent image
 FROM python:3.11-slim
