--- a/apps/kavita/Dockerfile
+++ b/apps/kavita/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION
 
-FROM jvmilazz0/kavita:${VERSION} as upstream
+FROM jvmilazz0/kavita:nightly-${VERSION} as upstream
 FROM ghcr.io/elfhosted/ubuntu:rolling@sha256:224fbe07e825d0ee91b483bd8403be754971bd0d4813689dbeb28a2435ab46d6  
 
 # for initial install
