--- a/apps/cli_debrid/ci/goss.yaml
+++ b/apps/cli_debrid/ci/goss.yaml
@@ -1,17 +1,22 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  autobrr:
+  python:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:7474:
+  tcp6:5000:
     listening: true
+  tcp6:5001:
+    listening: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:7474:
+  http://localhost:5000:
     status: 200
     timeout: 5000
+  http://localhost:5001:
+    status: 200
+    timeout: 5000    
