--- a/apps/cli_debrid/Dockerfile
+++ b/apps/cli_debrid/Dockerfile
@@ -10,6 +10,27 @@ RUN git clone -b $VERSION  https://github.com/godver3/cli_debrid.git /source
 # Use Python 3 as the base image
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends xz-utils
+
+# Define build arguments
+ARG RCLONE_VERSION=current
+
+ENV S6_OVERLAY_VERSION=3.2.0.0
+
+# Define working directory.
+WORKDIR /tmp
+
+ARG user=elfie
+RUN groupadd -g 568 $user && useradd --create-home --uid 568 --gid 568 --shell /bin/bash $user
+
+# Add s6
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz
+RUN chown -R elfie:elfie /run
+
+
 # Set the working directory in the container
 WORKDIR /app
 
@@ -28,7 +49,9 @@ COPY --from=cloner /source/. .
 
 # Create necessary directories and files
 RUN mkdir -p /user/db_content /user/config /user/logs && \
-    touch /user/logs/debug.log /user/logs/info.log /user/logs/queue.log
+    touch /user/logs/debug.log /user/logs/info.log /user/logs/queue.log && \
+    chown elfie /user -R && \
+    chown elfie /app/
 
 # Set the TERM environment variable for proper terminal attachment
 ENV TERM=xterm
@@ -37,18 +60,8 @@ ENV TERM=xterm
 RUN sed -i 's/^export LC_ALL=C.UTF-8/# export LC_ALL=C.UTF-8/' /etc/profile && \
     sed -i 's/^clear/# clear/' /etc/profile
 
-# Expose ports for both Flask apps
-EXPOSE 5000 5001
+COPY --chown=568:568 apps/cli_debrid/root /
 
-# Copy supervisord configuration
-COPY --from=cloner /source/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+USER 568
 
-# Create a startup script
-RUN echo '#!/bin/bash\n\
-supervisord -n -c /etc/supervisor/conf.d/supervisord.conf & \n\
-sleep 2\n\
-exec tail -F /user/logs/debug.log' > /app/start.sh && \
-chmod +x /app/start.sh
-
-# Start supervisord and tail the log file
-CMD ["/app/start.sh"]
+ENTRYPOINT [ "/init" ]
