--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -6,29 +6,28 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone https://github.com/elfhosted/comet.git /source
+RUN git clone -b $VERSION https://github.com/g0ldyy/comet.git /source
 
 # Patch out requirement for warp
 COPY apps/comet/no-warp-necessary.patch /source/
 RUN cd /source && git apply no-warp-necessary.patch && rm no-warp-necessary.patch
 
 # Patch in the stremthru PR
-# RUN cd /source && \
-#     wget https://patch-diff.githubusercontent.com/raw/g0ldyy/comet/pull/166.patch && \
-#     git apply 166.patch
+RUN cd /source && \
+    wget https://patch-diff.githubusercontent.com/raw/g0ldyy/comet/pull/166.patch && \
+    git apply 166.patch
 
 
 FROM python:3.11-alpine
 LABEL name="Comet" \
-    description="Stremio's fastest torrent/debrid search add-on." \
-    url="https://github.com/g0ldyy/comet"
+      description="Stremio's fastest torrent/debrid search add-on." \
+      url="https://github.com/g0ldyy/comet"
 
 ARG BUILD_VERSION=UNKNOWN
 ENV BUILD_VERSION=${VERSION}
 
 WORKDIR /app
 
-ARG DATABASE_PATH
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -46,7 +45,6 @@ RUN apk add --no-cache \
     libffi-dev \
     make
 
-# Install poetry and gunicorn
 RUN pip install poetry
 COPY --from=cloner /source/. .
 
@@ -64,10 +62,7 @@ RUN \
     && adduser -S elfie -G elfie --uid 568 \
     && chown elfie -R /app
 
-# Copy application code
-COPY --from=cloner /source/. .
 
-# Default command using gunicorn
-ENTRYPOINT ["poetry", "run", "gunicorn", "comet.main:app", \
-    "--config", "comet/gunicorn_conf.py", \
-    "--worker-class", "uvicorn.workers.UvicornWorker"]
+USER 568
+
+ENTRYPOINT ["poetry", "run", "python", "-m", "comet.main"]
