keep a copy of the source
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/debridav/dev/Dockerfile
+++ b/apps/debridav/dev/Dockerfile
@@ -21,6 +21,7 @@ FROM openjdk:21-jdk-slim
 WORKDIR /app
 
 COPY --from=base /app/build/libs/debridav*.jar /app
+COPY --from=cloner /source /source
 # Expose any necessary ports (adjust as needed)
 EXPOSE 8080
 
