--- a/apps/debridav/Dockerfile
+++ b/apps/debridav/Dockerfile
@@ -1,5 +1,6 @@
 # Use official OpenJDK 21 image as base
 FROM openjdk:21-jdk-slim as base
+ARG VERSION
 
 # Set working directory in the container
 WORKDIR /app
