Add curl to gluetun
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/gluetun/Dockerfile
+++ b/apps/gluetun/Dockerfile
@@ -1,7 +1,7 @@
 ARG VERSION
 FROM qmcgaw/gluetun:v${VERSION} as upstream
 
-RUN apk --no-cache add bind-tools 
+RUN apk --no-cache add bind-tools curl
 
 COPY apps/gluetun/entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
