--- a/apps/threadfin/Dockerfile
+++ b/apps/threadfin/Dockerfile
@@ -2,6 +2,8 @@
 # -----------------------------------------------------------------------------
 FROM golang:1.22 AS builder
 
+ARG VERSION
+
 # Download the source code
 RUN apt-get update && apt-get install -y git
 RUN git clone -b $VERSION https://github.com/Threadfin/Threadfin.git /src
