--- a/apps/komga/ci/goss.yaml
+++ b/apps/komga/ci/goss.yaml
@@ -4,9 +4,9 @@ process:
   java:
     running: true
 
-port:
-  tcp:25600:
-    listening: true
+# port:
+#   tcp:25600:
+#     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
