--- a/apps/tmdb-addon/Dockerfile
+++ b/apps/tmdb-addon/Dockerfile
@@ -9,7 +9,7 @@ RUN apk update && apk upgrade && \
 
 RUN git clone  https://github.com/mrcanelas/tmdb-addon.git /source
 
-COPY apps/tmdb/elfhosted.patch /
+COPY apps/tmdb-addon/elfhosted.patch /
 
 # Apply ElfHosted tweaks
 RUN cd /source && \
