--- a/apps/gotosocial/ci/goss.yaml
+++ b/apps/gotosocial/ci/goss.yaml
@@ -3,15 +3,22 @@
 process:
   gotosocial:
     running: true
+  ttyd:
+    running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
   tcp6:8080:
     listening: true
+  tcp6:3001:
+    listening: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
   http://localhost:8080:
+    status: 200
+    timeout: 5000
+  http://localhost:3001:
     status: 200
     timeout: 5000
