--- a/apps/mediafusion/Dockerfile
+++ b/apps/mediafusion/Dockerfile
@@ -62,4 +62,4 @@ USER mediafusion
 EXPOSE 8000
 EXPOSE 9191
 
-CMD ["/mediafusion/deployment/startup.sh"]
+CMD ["pipenv", "run", "gunicorn", "api.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120", "--max-requests", "2500", "--max-requests-jitter", "500"]
