make cinesync less-restricted for CLI access
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/cinesync/restricted.tmux.conf
+++ b/apps/cinesync/restricted.tmux.conf
@@ -1,15 +1,15 @@
 # Always launch PD
-set -g default-command "/cinesync.sh"
+# set -g default-command "/cinesync.sh"
 
 # "lock down" tmux
-unbind C-b
-unbind %
-unbind '"'
-unbind c
-set -g mouse off
+# unbind C-b
+# unbind %
+# unbind '"'
+# unbind c
+# set -g mouse off
 
 # Disable status bar
-set -g status off
+# set -g status off
 
 # Disable special characters on scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
