--- a/apps/cli_debrid/Dockerfile
+++ b/apps/cli_debrid/Dockerfile
@@ -7,9 +7,6 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION  https://github.com/godver3/cli_debrid.git /source
 
-# Add latest cynesync
-RUN git clone https://github.com/sureshfizzy/CineSync.git /cinesync
-
 # Use Python 3 as the base image
 FROM python:3.11-slim
 
@@ -38,11 +35,12 @@ RUN chown -R elfie:elfie /run
 WORKDIR /app
 
 # Install build dependencies and supervisor
-RUN apt-get update && apt-get install -y gcc supervisor && \
+RUN apt-get update && apt-get install -y gcc supervisor ffmpeg && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy only the requirements file first to leverage Docker cache
 COPY --from=cloner /source/requirements-linux.txt .
+
 # Install the requirements
 RUN pip install --no-cache-dir -r requirements-linux.txt
 
@@ -63,14 +61,6 @@ RUN sed -i 's/^export LC_ALL=C.UTF-8/# export LC_ALL=C.UTF-8/' /etc/profile && \
     sed -i 's/^clear/# clear/' /etc/profile
 
 COPY --chown=568:568 apps/cli_debrid/root /
-
-# Copy and install cinesync
-COPY --from=cloner /cinesync /cinesync
-WORKDIR /cinesync
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Back to app
-WORKDIR /app
 
 USER 568
 
