Forgot the last bit
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/cinesync/restricted.tmux.conf
+++ b/apps/cinesync/restricted.tmux.conf
@@ -9,7 +9,7 @@
 # set -g mouse off
 
 # Disable status bar
-# set -g status off
+set -g status off
 
 # Disable special characters on scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
